projetGL/src/test/deca/syntax/valid/ourTests/test_cast_float_to_int.deca
// Cast explicite d'un float en entier.
{
    float f = 3.14;
    int i = (int) (f); 
    // Résultat attendu : i == 3 (perte de la partie décimale)
}