projetGL/src/test/deca/syntax/invalid/ourTests/test_param_readInt.deca
// Description:
// erreur sur parametre de readInt
//readInt attend un entier
{
    int a=readInt(readFloat());
}